src/test/deca/context/valid/objet/object_cont_01.deca
// Description:
//   Object
//
// Resultats:
//
//
// Historique:
//    cree le 01/01/2023

class A {
    Object getX() {
        this;
    }
}

