src/test/deca/context/invalid/objet/returnType_incompatible.deca
// Description:
//     Type de return incompatible.
//
// Resultats:
//    Error
//
// Historique:
//    cree le 01/01/2023

class A{
    int getX(A a){
        return a;
    }
}


